# kettlevm

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  cmake_windows.cmake  kettlevm.csproj  kettlevm.sln
kettlelang/: Fuck.cs  Makefile  README.md  ast.h  common.h  lexer.l  parser.y  token.h
kettlevm/: Program.cs  kettlevm.csproj
kettlevm/lang/: Lexer.cs  Token.cs
kettlevm/lang/parser/: Ast.cs  Parser.cs
kettlevm/lang/parser/statements/: AstStmts.cs
kettlevm/test/: class_decl.ktl  lexer.ktl
scripts/: clean  release_linux  release_windows  run
src/: Program.cs  main.c  main.zig  util.zig
src/core/: array.c  array.h
src/lang/: CompilerState.cs  compiler_state.zig  lexer.zig  token.zig
src/lang/lexer/: Keywords.cs  Lexer.cs  Literals.cs  Scanner.cs  ScannerUtils.cs  Token.cs  TokenType.cs  Util.cs
src/lang/parse/: keywords.zig  lexer.zig  literals.zig  token.zig
src/lang/parser/: Ast.cs  Parser.cs  Type.cs
src/lang/parser/statements/: Functions.cs
test/: class_decl.ktl  lexer.ktl
